--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             </section>
         </main>
     </div>
-    
+    <footer>
+        Feito com 
+        <img src="assets/heart.svg" alt="Coraçãozinho"> 
+        por Leonardo de Jesus
+    </footer>
 </body>
 </html>
